OpenAPI CRD: replaced ConfigMapRef by SecretRef
