# deploy/crds/capabilities.3scale.net_openapis_crd.yaml
@@ -34,8 +34,9 @@ spec:
             openapiRef:
               description: OpenAPIRef Reference to the OpenAPI Specification
               properties:
-                configMapRef:
-                  description: ConfigMapRef ConfigMap that contains the OpenAPI Document
+                secretRef:
+                  description: SecretRef refers to the secret object that contains
+                    the OpenAPI Document
                   properties:
                     apiVersion:
                       description: API version of the referent.
@@ -77,9 +78,9 @@ spec:
               type: object
               oneOf:
                 - properties:
-                    configMapRef:
+                    secretRef:
                       type: object
-                  required: ["configMapRef"]
+                  required: ["secretRef"]
                 - properties:
                     url:
                       type: string
